--- a/examples/interactive-script.html
+++ b/examples/interactive-script.html
@@ -50,9 +50,6 @@ function audit() {
     <script type="text/javascript">
         let scriptId = "";
         let inputIndex = 0;
-        let remainingInputFields = 0;
-        var fieldsElement = null;
-        var fieldsFinalElement = null;
         var webSocket = null;
 
         function submitInput(index, field) {
@@ -63,13 +60,13 @@ function audit() {
         }
 
         function submitForm(index, numFields) {
-            for (let i = 1; i <= numFields; i++) {
+            for (let i = 0; i < numFields; i++) {
                 document.getElementById("input-" + index + "-" + i).disabled = true;
             }
 
             document.getElementById("input-button-" + index).disabled = true;
 
-            for (let i = numFields; i > 0; i--) {
+            for (let i = 0; i < numFields; i++) {
                 let inputElement = document.getElementById("input-" + index + "-" + i);
                 if (inputElement.type === "checkbox") {
                     webSocket.send(inputElement.checked);
@@ -94,94 +91,113 @@ function audit() {
             inputIndex += 1;
         }
 
-        function createInputForm(numOfFields, fieldsMessage) {
-            remainingInputFields = Number(numOfFields);
-            fieldsElement = document.createElement("div");
+        function createInputForm(message, fields) {
+            let fieldsElement = document.createElement("div");
             fieldsElement.id = "input-" + inputIndex;
-            fieldsElement.innerHTML += "<h3>" + fieldsMessage + "</h3>";
+            fieldsElement.innerHTML += "<h3>" + message + "</h3>";
 
-            fieldsFinalElement = document.createElement("div");
+            for (let i = 0; i < fields.length; i++) {
+                let field = fields[i];
+                let inputType;
+
+                if (field.type === "BOOLEAN") {
+                    inputType = "checkbox";
+                } else if (field.type === "NUMBER") {
+                    inputType = "number";
+                } else if (field.type === "STRING") {
+                    inputType = "text";
+                } else {
+                    window.alert("Unknown field type: " + field.type);
+                    inputType = "text";
+                }
+
+                let formFieldDiv = document.createElement("div");
+                formFieldDiv.innerHTML =
+                    "<label for=\"input-" + inputIndex + "-" + i + "\">" + field.description +
+                    "</label> <input id=\"input-" + inputIndex + "-" + i + "\" type=\"" + inputType +
+                    "\"><br><br>";
+
+                fieldsElement.appendChild(formFieldDiv);
+            }
+
+            let fieldsFinalElement = document.createElement("div");
             fieldsFinalElement.innerHTML =
                 "<button id=\"input-button-" + inputIndex + "\" " +
-                "onclick=\"submitForm(" + inputIndex + ", " + remainingInputFields + ");\">Submit</button>";
+                "onclick=\"submitForm(" + inputIndex + ", " + fields.length + ");\">Submit</button>";
+
+            fieldsElement.appendChild(fieldsFinalElement);
 
             let scriptIo = document.getElementById("script-io");
             scriptIo.appendChild(fieldsElement);
             scriptIo.appendChild(document.createElement("br"));
         }
 
-        function appendFormField(type, description) {
-            let inputType;
+        function processInfoMessage(message) {
+            let scriptLog = document.getElementById("script-log");
 
-            if (type === "BOOLEAN") {
-                inputType = "checkbox";
-            } else if (type === "NUMBER") {
-                inputType = "number";
+            if (message.message === "connected") {
+                scriptLog.innerHTML += "<p>Connection established</p>";
+            } else if (message.message === "notFound") {
+                scriptLog.innerHTML += "<p>Script with ID " + scriptId + " not found</p>";
+            } else if (message.message === "executing") {
+                scriptLog.innerHTML += "<p>Script execution has started</p>";
             } else {
-                inputType = "text";
-            }
-
-            document.getElementById("input-" + inputIndex);
-            let formFieldDiv = document.createElement("div");
-            formFieldDiv.innerHTML =
-                "<label for=\"input-" + inputIndex + "-" + remainingInputFields + "\">" + description +
-                "</label> <input id=\"input-" + inputIndex + "-" + remainingInputFields + "\" type=\"" + inputType +
-                "\"><br><br>";
-
-            fieldsElement.appendChild(formFieldDiv);
-            remainingInputFields -= 1;
-
-            if (remainingInputFields === 0) {
-                fieldsElement.appendChild(fieldsFinalElement);
-                inputIndex += 1;
+                window.alert("Unknown WS INFO message: " + JSON.stringify(message));
             }
         }
 
-        function processWsMessage(message) {
-            let scriptLog = document.getElementById("script-log");
+        function processCommandMessage(message) {
             let scriptIo = document.getElementById("script-io");
-            let scriptResult = document.getElementById("script-result");
 
-            if (message === "connected") {
-                scriptLog.innerHTML += "<p>Connection established</p>";
-            } else if (message === "notFound") {
-                scriptLog.innerHTML += "<p>Script with ID " + scriptId + " not found</p>";
-            } else if (message === "executing") {
-                scriptLog.innerHTML += "<p>Script execution has started</p>";
-            } else if (message.startsWith("readBoolean:")) {
-                createInputField(message.substring("readBoolean:".length), "checkbox", "checked");
-            } else if (message.startsWith("readNumber:")) {
-                createInputField(message.substring("readString:".length), "number", "value");
-            } else if (message.startsWith("readString:")) {
-                createInputField(message.substring("readString:".length), "text", "value");
-            } else if (message.startsWith("readFields:")) {
-                let numOfFields = message.substring("readFields:".length).split(":", 1)[0];
-                let fieldsMessage = message.substring(("readFields:" + numOfFields + ":").length);
-                createInputForm(numOfFields, fieldsMessage);
-            } else if (message.startsWith("field:") && remainingInputFields > 0) {
-                let type = message.substring("field:".length).split(":", 1)[0];
-                let name = message.substring(("field:" + type + ":").length).split(":", 1)[0];
-                let description = message.substring(("field:" + type + ":" + name + ":").length).split(":", 1)[0];
-                appendFormField(type, description);
-            } else if (message.startsWith("renderText:")) {
+            if (message.command === "readBoolean") {
+                createInputField(message.message, "checkbox", "checked");
+            } else if (message.command === "readNumber") {
+                createInputField(message.message, "number", "value");
+            } else if (message.command === "readString") {
+                createInputField(message.message, "text", "value");
+            } else if (message.command === "readFields") {
+                createInputForm(message.message, message.fields);
+            } else if (message.command === "renderText") {
                 let textElement = document.createElement("div");
-                textElement.innerText = message.substring("renderText:".length);
+                textElement.innerText = message.text;
                 scriptIo.appendChild(textElement);
                 scriptIo.appendChild(document.createElement("br"));
-            } else if (message.startsWith("renderHtml:")) {
+            } else if (message.command === "renderHtml") {
                 let htmlElement = document.createElement("div");
-                htmlElement.innerHTML = message.substring("renderHtml:".length);
+                htmlElement.innerHTML = message.html;
                 scriptIo.appendChild(htmlElement);
                 scriptIo.appendChild(document.createElement("br"));
-            } else if (message.startsWith("renderMarkdown:")) {
+            } else if (message.command === "renderMarkdown") {
                 let markdownElement = document.createElement("pre");
-                markdownElement.innerText = message.substring("renderMarkdown:".length);
-                scriptIo.appendChild(textElement);
+                markdownElement.innerText = message.markdown;
+                scriptIo.appendChild(markdownElement);
                 scriptIo.appendChild(document.createElement("br"));
-            } else if (message.startsWith("error:")) {
-                scriptResult.innerHTML += "Error: " + message.substring("error:".length);
+            } else {
+                window.alert("Unknown WS COMMAND message: " + JSON.stringify(message));
+            }
+        }
+
+        function processResponseMessage(message) {
+            let scriptResult = document.getElementById("script-result");
+
+            if (message.success) {
+                scriptResult.innerHTML += "Result: " + JSON.stringify(message.payload);
             } else if (message.startsWith("ok:")) {
-                scriptResult.innerHTML += "Result: " + message.substring("ok:".length);
+                scriptResult.innerHTML += "Error: " + JSON.stringify(message.payload);
+            }
+        }
+
+        function processWsMessage(rawMessage) {
+            let message = JSON.parse(rawMessage);
+
+            if (message.messageType === "INFO") {
+                processInfoMessage(message);
+            } else if (message.messageType === "COMMAND") {
+                processCommandMessage(message);
+            } else if (message.messageType === "RESPONSE") {
+                processResponseMessage(message);
+            } else {
+                window.alert("Unknown WS message: " + rawMessage);
             }
         }
 
