--- a/examples/interactive-script.html
+++ b/examples/interactive-script.html
@@ -3,8 +3,16 @@
     <body>
         <label for="script-input">Auditing script:</label><br>
         <br>
-        <textarea id="script-input" rows="35" cols="120">
+        <textarea id="script-input" rows="42" cols="120">
 function audit() {
+    let displayHtmlFragment = Input.readBoolean("Display HTML fragment?");
+
+    if (displayHtmlFragment) {
+        Output.renderHtml(Ipfs.getFile("fragment.html"));
+    } else {
+        Output.renderText("HTML fragment not rendered");
+    }
+
     let booleanValue = Input.readBoolean("Example boolean input:");
     Output.renderText("Got value: " + booleanValue);
 
@@ -42,7 +50,12 @@ function audit() {
         <button id="store-script" onclick="saveScript();">Store script</button>
         <br>
         <p id="script-response"></p>
-        <button id="execute-script" onclick="executeScript();" hidden>Execute script</button>
+        <div id="execute-script-block" hidden>
+            <label for="ipfs-directory-hash">Input optional IPFS directory hash:</label>
+            <input id="ipfs-directory-hash" type="text" size="56"
+                   value="QmeRQcjtdpVsdAwqQAChrGhJXVPCfH9q1KiE1dqUNBaywU">
+            <button id="execute-script" onclick="executeScript();">Execute script</button>
+        </div>
         <div id="script-log"></div>
         <div id="script-io"></div>
         <div id="script-result"></div>
@@ -211,11 +224,11 @@ function audit() {
                     if (this.status === 200) {
                         let responseJson = JSON.parse(this.responseText);
 
-                        document.getElementById("store-input").disabled = true;
+                        document.getElementById("script-input").disabled = true;
                         document.getElementById("store-script").disabled = true;
                         document.getElementById("script-response").innerHTML = "Script stored under UUID: " +
                             responseJson.id;
-                        document.getElementById("execute-script").hidden = false;
+                        document.getElementById("execute-script-block").hidden = false;
                         scriptId = responseJson.id;
                     } else {
                         document.getElementById("script-response").innerHTML = "Error while storing the script";
@@ -227,9 +240,20 @@ function audit() {
 
         function executeScript() {
             document.getElementById("execute-script").disabled = true;
+            let ipfsDirectoryInput = document.getElementById("ipfs-directory-hash");
+            ipfsDirectoryInput.disabled = true;
+
+            let webSocketUrl = "ws://localhost:8080/script/interactive/" + scriptId;
+            let ipfsDirectoryHash = ipfsDirectoryInput.value;
+
+            if (ipfsDirectoryHash !== null && ipfsDirectoryHash.trim().length !== 0) {
+                webSocketUrl += "?ipfs-directory=" + ipfsDirectoryHash.trim();
+            }
+
+            webSocket = new WebSocket(webSocketUrl);
+
             let scriptLog = document.getElementById("script-log");
 
-            webSocket = new WebSocket("ws://localhost:8080/script/interactive/" + scriptId);
             webSocket.onopen = function () {
                 scriptLog.innerHTML += "<p>Connection opened</p>";
             }
