SD-101: write example auditing script for Croatia

--- a/examples/interactive-script.html
+++ b/examples/interactive-script.html
@@ -1,5 +1,15 @@
 <html lang="en">
     <title>Interactive auditing script example</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        td, th {
+            padding: 15px;
+        }
+    </style>
     <body>
         <label for="script-input">Auditing script:</label><br>
         <br>
