SD-101: add button support to example HTML

--- a/examples/interactive-script.html
+++ b/examples/interactive-script.html
@@ -75,6 +75,11 @@ function audit(auditData) {
         let inputIndex = 0;
         var webSocket = null;
 
+        function submitRawInput(index, value) {
+            document.getElementById("input-button-" + index).disabled = true;
+            webSocket.send(value);
+        }
+
         function submitInput(index, field) {
             document.getElementById("input-button-" + index).disabled = true;
             let inputElement = document.getElementById("input-" + index);
@@ -97,6 +102,19 @@ function audit(auditData) {
                     webSocket.send(inputElement.value);
                 }
             }
+        }
+
+        function createButton(message) {
+            let inputFieldDiv = document.createElement("div");
+            inputFieldDiv.innerHTML =
+                "<button id=\"input-button-" + inputIndex + "\" " + "onclick=\"submitRawInput(" + inputIndex +
+                ", 'click');\">" + message + "</button>";
+
+            let scriptIo = document.getElementById("script-io");
+            scriptIo.appendChild(inputFieldDiv);
+            scriptIo.appendChild(document.createElement("br"));
+
+            inputIndex += 1;
         }
 
         function createInputField(message, inputType, valueField) {
@@ -204,6 +222,8 @@ function audit(auditData) {
                 createInputField(message.message, "text", "value");
             } else if (message.command === "readFields") {
                 createInputForm(message.message, message.fields);
+            } else if (message.command === "button") {
+                createButton(message.message);
             } else if (message.command === "renderText") {
                 let textElement = document.createElement("div");
                 textElement.innerText = message.text;
