SD-101: fix error in auditing script

--- a/examples/audit-croatia/step-9.html
+++ b/examples/audit-croatia/step-9.html
@@ -15,13 +15,7 @@
             <th>Udio</th>
             <th>OIB</th>
         </tr>
-        <tr>
-            <td>{ordinalNumber}</td>
-            <td>{totalAssetShares}</td>
-            <td>{ownerName}</td>
-            <td>{pid}</td>
-            <td>{subdivisionShares}</td>
-        </tr>
+        {tableRows}
     </table>
     <p><b>NOTE:</b> the value shown here for the <b>'Prezime i ime odnosno tvrtka ili naziv, prebivalište odnosno
         sjedište upisane osobe'</b> column is only partial - you should only confirm that the column in the document
